<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/grocery_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/configure_activity_list_background_with_ripple"
        android:padding="16dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_list"
            android:layout_marginStart="8dp"
            />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_list_milk" />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_list_eggs" />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grocery_list_tomatoes" />

        <TextView
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plus_three_other_items"
            android:layout_marginStart="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/configure_activity_list_background_with_ripple"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:clickable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list"
            android:layout_marginStart="8dp"
            />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_clean_kitchen" />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_buy_groceries" />

        <CheckBox
            style="@style/Widget.AppWidget.Checkbox.ConfigureActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_build_widgets" />
    </LinearLayout>
</LinearLayout>