<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppWidget.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/widget_element_min_length" >

        <TextView
            android:id="@+id/todo_list_title"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:text="@string/todo_list"
            android:textColor="?android:attr/textColorPrimary" />

        <ImageButton
            android:layout_width="@dimen/widget_element_min_length"
            android:layout_height="@dimen/widget_element_min_length"
            android:src="@drawable/ic_add_24"
            android:contentDescription="@string/add_button_grocery_list_content_description"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:tint="?android:attr/colorAccent" />
    </LinearLayout>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/widget_element_min_length"
        android:text="@string/todo_list_clean_kitchen"
        android:textColor="?android:attr/textColorPrimary"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/widget_element_min_length"
        android:text="@string/todo_list_buy_groceries"
        android:textColor="?android:attr/textColorPrimary"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/widget_element_min_length"
        android:text="@string/todo_list_build_widgets"
        android:textColor="?android:attr/textColorPrimary"
        />
</LinearLayout>