<!--
  ~ Copyright (C) 2021 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Widget.AppWidget.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppWidget.AppWidgetContainer">

    <include layout="@layout/widget_checkbox_list_title_region" />

    <LinearLayout
        android:id="@+id/todo_grid_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/todo_grid_left_row"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <include layout="@layout/widget_grocery_list_left_items" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/todo_grid_right_row"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <CheckBox
                style="@style/Widget.AppWidget.Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery_list_cheese" />

            <CheckBox
                style="@style/Widget.AppWidget.Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery_list_potatoes" />

            <CheckBox
                style="@style/Widget.AppWidget.Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery_list_broccoli" />

            <CheckBox
                style="@style/Widget.AppWidget.Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery_list_salmon" />

            <CheckBox
                style="@style/Widget.AppWidget.Checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grocery_list_yogurt" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>